--- a/README
+++ b/README
@@ -1,1 +1,18 @@
+# Crypy Raider
+
+[![Open Source? Yes!](https://badgen.net/badge/Open%20Source%20%3F/Yes%21/blue?icon=github)](https://github.com/peterjameskay/cryptraider)
+
+![](https://github.com/peterjameskay/CryptRaider/blob/main/CryptRaiderScreenshot.jpg)
+
+Crypt Raider is a first person puzzle game, used to show examples of line tracing, collisions, modular level designs, Lumen lighting and more.
+
+This project can be used as a template for creating a similar genre game. Great for a base level.
+
+## Features
+
+- C++ Unreal Engine 5 project
+- Modular Level Designs
+- Moveable Actor Components
+- Enhanced Input Subsystem is used for input
+- 1st Person Puzzle Game set up
 
